--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,13 @@
 version: 2.1
+
+parameters:
+  terraform_apply:
+    type: boolean
+    default: false
+  terraform_destroy:
+    type: boolean
+    default: true
+
 orbs:
   slack: circleci/slack@4.4.4
   terraform: circleci/terraform@3.0.0
@@ -59,7 +68,7 @@ jobs:
           path: .
       - terraform/apply:
           path: .
-          
+
   terraform_destroy:
     machine:
       image: ubuntu-1604:202007-01
@@ -111,6 +120,7 @@ jobs:
 
 workflows:
   terraform_create_eks_cluster:
+    when: << pipeline.parameters.terraform_apply >>
     jobs:
       - slack_notify
       - terraform_init:
@@ -128,3 +138,22 @@ workflows:
           terraform_action: create
           requires:
             - terraform_apply
+  terraform_remove_eks_cluster:
+    when: << pipeline.parameters.terraform_destroy >>
+    jobs:
+      - slack_notify
+      - terraform_init:
+          requires:
+            - slack_notify
+
+      - terraform_destroy:
+          requires:
+            - terraform_init
+          filters:
+            branches:
+              only: master
+
+      - slack_notify_action:
+          terraform_action: create
+          requires:
+            - terraform_destroy
